# mujica-robot

./: .gitignore  AGENTS.md  PLANS.md  README.md  package.json  tsconfig.base.json
docs/: ARCHITECTURE.md  CLI.md  PROJECT_FORMAT.md
examples/: mujica-workspace.json
plans/: capture-calibrated-robust-policy-research.md  command-conditioned-locomotion.md  command-transitions-and-braking.md  completion-audit.md  device-telemetry-replay.md  digital-twin-residual-audit.md  driver-command-lease-watchdog.md  evidence-bound-system-identification.md  evidence-guided-compound-recovery.md  executable-controller-interfaces.md  executable-development-review.md  extreme-traction-pitch-stability.md  fail-closed-decision-deadlines.md  fail-closed-device-health.md  forward-locomotion-milestone.md  frozen-driver-package-deployment.md  frozen-hardware-state-abi.md  human-ai-debugging-workspace.md  human-guided-research-briefs.md  human-reviewed-research-outcomes.md  integrated-mission-development.md  latched-stop-fault-isolation.md  low-friction-traction-recovery.md  ml-motion-quality-autoresearch.md  motion-quality-comparison.md  mujica-foundation.md  plant-compatible-history-policy.md  policy-revision-shadow-deployment.md  project-first-workspace.md  quadruped-autoresearch-loop.md  quadruped-policy-autoresearch.md  research-lab-v2.md  (+8 more)
runtime/: pyproject.toml
runtime/src/mujica_runtime/: __init__.py  calibration.py  cli.py  controllers.py  environment.py  hardware_capture.py  io.py  replay.py  simulation.py  state_abi.py  training.py  twin_audit.py
runtime/tests/: test_runtime.py
(+6757 files in other folders)
