[project]
name = "mujica-runtime"
version = "0.2.0"
description = "MuJoCo execution and training runtime for Mujica"
requires-python = ">=3.11"
dependencies = [
  "mujoco>=3.3.0",
  "numpy>=2.0.0",
  "torch>=2.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mujica_runtime"]
